crates/analyzer/tests/snapshots/errors__string_non_int_type_arg.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: `String` max size must be an integer
  ┌─ [snippet]:3:17
  │
3 │   let x: String<u8>
  │                 ^^ expected an integer


